modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1519,7 +1519,10 @@
                         <p class="m-auto line-height-3">数据分析：谢建双 张思锐</p>
                         <p class="m-auto line-height-3">文稿写作：张思锐 谢建双</p>
                         <p class="m-auto line-height-3">可视化：张鹤馨 张思锐 谢建双</p>
-                        <p class="m-auto line-height-3">插图绘制：张鹤馨</p>
+                        <p class="m-auto">插图绘制：张鹤馨</p>
+                        <p class="small m-auto text-center col-lg-3">
+                            （注：作品中部分插图使用AI生成）
+                        </p>
                         <p class="m-auto line-height-3">网站制作：谢建双</p>
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3">数据来源：</p>
